--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,50 @@
-node_modules
-dist
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Build output
+dist/
+server/public/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# OS
 .DS_Store
-server/public
-vite.config.ts.*
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+.local/
+
+# Build artifacts
 *.tar.gz
+*.zip
+vite.config.ts.*
+
+# Database (optional - remove if you want to commit)
+# sqlite.db
+# sqlite.db-journal
